--- a/src/app.html
+++ b/src/app.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <link rel="icon" href="/favicon.png">
-  <meta name="viewport" content="width=device-width">
+<html lang="en" class="dark">
+	<head>
+		<meta charset="utf-8" />
+		<link rel="icon" href="/favicon.png" />
+		<meta name="viewport" content="width=device-width" />
 
-  <title>kluften.dev</title>
-</head>
+		<title>kluften.dev</title>
+	</head>
 
-<body>
-  %sveltekit.head%
+	<body>
+		%sveltekit.head%
 
-  <div style="display: contents">
-    %sveltekit.body%
-  </div>
-</body>
+		<div style="display: contents">%sveltekit.body%</div>
+	</body>
 </html>
