--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,7 @@
 		<title>kluften.dev</title>
 	</head>
 
-	<body>
+	<body data-theme="kluften">
 		%sveltekit.head%
 
 		<div style="display: contents">%sveltekit.body%</div>
