--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,10 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
+		<meta
+			name="description"
+			content="Homepage for Marius Nilsen Kluften, a web developer based in Oslo who loves React, Svelte, TypeScript, Elixir and Rust."
+		/>
 
 		<title>kluften.dev</title>
 	</head>
