feat: big upgrade

--- a/src/app.html
+++ b/src/app.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 
-<html lang="en" class="dark">
+<html lang="en" data-theme="kluften">
 	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="/favicon.png" />
-		<meta name="viewport" content="width=device-width" />
-		<meta
-			name="description"
+		<meta charset="utf-8" >
+		<link rel="icon" href="/favicon.png" >
+		<meta name="viewport" content="width=device-width" >
+		<meta name="description"
 			content="Homepage for Marius Nilsen Kluften, a web developer based in Oslo who loves React, Svelte, TypeScript, Elixir and Rust."
-		/>
+		>
 
 		<title>kluften.dev</title>
 	</head>
 
-	<body data-theme="kluften">
+	<body>
 		%sveltekit.head%
 
 		<div style="display: contents">%sveltekit.body%</div>
