feat: add support for markdown

--- a/src/app.html
+++ b/src/app.html
@@ -12,7 +12,7 @@
 		<title>kluften.dev</title>
 	</head>
 
-	<body>
+	<body class="bg-surface-100-900">
 		%sveltekit.head%
 
 		<div style="display: contents">%sveltekit.body%</div>
